testsuite/tests/typing-rectypes-bugs/pr6174_bad.compilers.reference
File "pr6174_bad.ml", line 11, characters 24-25:
11 |  fun C k -> k (fun x -> x);;
                             ^
Error: The value "x" has type "$'a" but an expression was expected of type
         "$'o" = "($'b -> $'o) -> $'o"
